--- a/import/config.json
+++ b/import/config.json
@@ -1,5 +1,7 @@
 {
-  "spaceId": "YOUR_SPACE_ID",
-  "managementToken": "YOUR_MANAGEMENT_TOKEN",
+  "spaceId": "iri9m598xf2h",
+  "managementToken": "CFPAT-U5KQDBvgnqqZZLBC1aEgscyub0Y2RyySBXGIrz0MDXM",
   "contentFile": "import/contentful-platzipedia.json"
 }
+
+
